# OpenCVUtils

./: CMakeLists.txt  README.md  main.cpp
lib/: CompareMats.cpp  CompareMats.h  CvText.cpp  CvText.h  MatIO.cpp  MatIO.h  SaveMat.cpp  SaveMat.h  tools.cpp  tools.h
